# maquinaria-pesada

./: .env.example  .gitignore  .pre-commit-config.yaml  APPCONTENIDOS.md  BIBLIA.md  BIBLIA_SISTEMA.md  CLAUDE.md  EP001_guion_etiquetas.txt  EP001_guion_etiquetas_v2.txt  EP001_guion_etiquetas_v3.txt  EVALUADOR_EDITORIAL_GUIONES.md  GENERACION.md  INSTRUCCIONES.txt  LICENSE  MIGRACION_V6_PLAN.md  PODCAST.md  PODCAST_MASTER_SPEC.md  PODCAST_M_SPEC.md  PODCAST_S_SPEC.md  PODCAST_T_SPEC.md  PRIMERPODCAST.md  README.md  SESION_genepisodios.md  VIDEOPODCAST.md  VOICE_CONFIG_REFERENCE.md  WORKFLOW_PAIR_PROGRAMMING.md  daylog.py  dual_debate.py  dual_debate_maquinaria.py  entrenar_v6.py  episode_state.py  estado_proyecto.py  evaluador_editorial.py  fix_guiones_v4.py  generar_episodio.py  generar_episodio_v2.py  generar_guion.py  generar_guion_t.py  guion_common.py  lanzar_guiones.py  (+16 more)
.claude/: settings.json
.github/: dependabot.yml
.streamlit/: config.toml
Guiones/: EP001_guion_etiquetas (1).txt  M0_Introduccion_Estrategica.txt  M0_T1_v6.md  M0_T_Introduccion_Estrategica.txt  M0_v6.md  M10_Sistemas_Agentes.txt  M10_T5_tool_use_function_calling.txt  M10_TX_T5_tool_use_function_calling.txt  M10_T_Sistemas_Agentes.txt  M10_T_Sistemas_Agentes.txt.bak  M11_Automatizacion.txt  M11_T_Automatizacion.txt  M12_Seguridad_IA.txt  M12_T2_prompt_injection.txt  M12_TX_T2_prompt_injection.txt  M12_T_Seguridad_IA.txt  M13_Gobernanza_Etica.txt  M13_T_Gobernanza_Etica.txt  M14_Estrategia_Empresa.txt  M14_T_Estrategia_Empresa.txt  M14_T_Estrategia_Empresa.txt.bak  M1_Fundamentos_Razonamiento.txt  M1_TX_T10_tokenizacion.txt  M1_TX_T11_limitaciones_llms.txt  M1_T_Fundamentos_Razonamiento.txt  M1_T_Fundamentos_Razonamiento.txt.bak  M2_Matematicas_Fundamentos.txt  M2_T_Matematicas_Fundamentos.txt  M2_T_Matematicas_Fundamentos.txt.bak  M3_Machine_Learning_Clasico.txt  M3_T2_modelos_clasicos.txt  M3_TX_T2_modelos_clasicos.txt  M3_T_Machine_Learning_Clasico.txt  M3_T_Machine_Learning_Clasico.txt.bak  M4_Deep_Learning.txt  M4_T_Deep_Learning.txt  M4_T_Deep_Learning.txt.bak  M5_NLP_LLMs.txt  M5_T_NLP_LLMs.txt  M6_Ingenieria_Prompts.txt  (+13 more)
Output_v6_aprobados/: README.md
_archivo/: generar_episodio.py
cockpit/: PLAN.md  SESSION_CONTEXT.md  app.py  help.py  home.py  pipeline_runner.py  theme.py  ui.py  ui_components.py  ui_map.py  (+1 more)
(+509 files in other folders)
