[project]
name = "maquinaria-pesada"
version = "0.1.0"
description = "Sistema de generación automática de podcasts/vídeos con IA."
requires-python = ">=3.10"

# Dependencias base de los pipelines top-level (generar_guion / generar_episodio
# / validar_episodio). Las extras del cockpit web están en el grupo opcional
# `cockpit` y, con versiones pineadas, en requirements-cockpit.txt.
dependencies = [
    "anthropic>=0.40",
    "elevenlabs>=1.0",
    "pydub>=0.25",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Cockpit web (web_server.py + Streamlit). Instalar con: pip install -e ".[cockpit]"
# o, con versiones reproducibles, pip install -r requirements-cockpit.txt
cockpit = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "streamlit>=1.32",
    "streamlit-autorefresh>=1.0",
    "psutil>=5.9",
    "pdfplumber>=0.11",
    "openai>=1.40",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "_archivo",
    "Guiones",
    "PDFs",
    "Videos",
    "RRSS",
    "episodios",
    "escaletas",
    "Logos",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line-too-long: scripts antiguos con strings largos
    "E402",  # module-level-import-not-at-top: sys.path hacks en Streamlit
    "B008",  # function call in argument defaults: argparse / typer
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --tb=short"
